# yt-interactive-downloader

./: .gitignore  README.md  pyproject.toml
src/yt_interactive_downloader/: __init__.py
src/yt_interactive_downloader/backend/: __init__.py  youtube.py
src/yt_interactive_downloader/frontend/: app.py
src/yt_interactive_downloader/frontend/templates/: index.html
